<resources>
    <string name="app_name">Vision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_s_icon">App\'s Icon</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_n_nvision_application">Welcome to \n \n Vision Application</string>
    <string name="please_enter_your_user_name">Please Enter Your Information</string>
    <string name="remember_me">Remember Me</string>
    <string name="user_name">User Name</string>
    <string name="submit">Submit</string>
    <string name="no_alerts_yet">No Alerts Yet</string>
    <string name="home">Home</string>
    <string name="scene">Scene</string>
    <string name="alerts">Alerts</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
</resources>