<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/nav_home"
        android:title="@string/home"/>

    <item
        android:icon="@drawable/baseline_person_24"
        android:id="@+id/nav_account"
        android:title="@string/account"/>


    <item
        android:icon="@drawable/baseline_add_alert_24"
        android:id="@+id/nav_alerts"
        android:title="@string/alerts" />
    <item
        android:icon="@drawable/baseline_switch_access_shortcut_24"
        android:id="@+id/nav_language"
        android:title="@string/change_lang" />
    <item
        android:icon="@drawable/baseline_logout_24"
        android:id="@+id/nav_logout"
        android:title="@string/logout" />

</menu>