<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sign_in.SignInScreen">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="false"

        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            />

        <Space
            android:id="@+id/spacer"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="match_parent"
            android:layout_height="20dp"/>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/toolbar_guide"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            android:layout_height="0dp"/>
        <Toolbar
            app:layout_constraintBottom_toTopOf="@id/toolbar_guide"
            app:layout_constraintTop_toBottomOf="@id/spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/backButton"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@null"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/language_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/image"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/forumGuide"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"
            android:layout_height="0dp"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startForumVertical"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            android:layout_height="0dp"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endForumVertical"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/text"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/forumGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userNameInputLayout"
         android:layout_width="0dp"
         android:layout_margin="10dp"
         app:startIconDrawable="@drawable/baseline_contacts_24"
         android:hint="@string/user_name"
         app:layout_constraintTop_toBottomOf="@id/text"
         app:layout_constraintStart_toEndOf="@id/startForumVertical"
         app:layout_constraintEnd_toStartOf="@id/endForumVertical"
         android:layout_height="wrap_content">


         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:maxLines="1"
             android:inputType="textPersonName"
             android:layout_height="match_parent"/>
     </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:hint="Password"
            app:startIconDrawable="@drawable/baseline_dialpad_24"

            app:layout_constraintTop_toBottomOf="@id/userNameInputLayout"
            app:layout_constraintStart_toEndOf="@id/startForumVertical"
            app:layout_constraintEnd_toStartOf="@id/endForumVertical"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintStart_toEndOf="@id/startForumVertical"
            android:layout_width="wrap_content"
            android:text="@string/remember_me"
            android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/signInButton"
           android:textColor="@color/white"
            android:text="@string/sign_in"
           android:layout_margin="10dp"
           app:layout_constraintTop_toBottomOf="@id/checkbox"
           app:layout_constraintStart_toEndOf="@id/startForumVertical"
           app:layout_constraintEnd_toStartOf="@id/endForumVertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>